# WorkingClass

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/working_class/: __init__.py
src/working_class/machine_learning/: __init__.py
src/working_class/machine_learning/embedding/: __init__.py
